--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@react-oauth/google": "^0.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-linkedin-login-oauth2": "^2.0.1",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
