--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,12 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "google-auth-library": "^9.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.5",
     "mongoose": "^8.0.0"
   }
 }
