--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@react-oauth/google": "^0.11.1",
+    "@zxing/library": "^0.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-linkedin-login-oauth2": "^2.0.1",
