--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.17",
     "@react-oauth/google": "^0.11.1",
     "@zxing/library": "^0.20.0",
+    "html-to-image": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-linkedin-login-oauth2": "^2.0.1",
