--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
+    "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.17",
     "@react-oauth/google": "^0.11.1",
     "@zxing/library": "^0.20.0",
