--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "google-auth-library": "^9.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
+    "mime": "^4.0.0",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "supertest": "^6.3.3"
   }
 }
