--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mime": "^4.0.0",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ws": "^8.15.1"
   }
 }
