--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.17",
     "@react-oauth/google": "^0.11.1",
+    "@reduxjs/toolkit": "^2.0.1",
     "@zxing/library": "^0.20.0",
-    "html-to-image": "^1.11.11",
     "browser-image-compression": "^2.0.2",
+    "html-to-image": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-linkedin-login-oauth2": "^2.0.1",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
