--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@zxing/library": "^0.20.0",
+    "babel-jest": "^29.7.0",
     "browser-image-compression": "^2.0.2",
     "html-to-image": "^1.11.11",
     "react": "^18.2.0",
