--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.17",
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "@testing-library/jest-dom": "^6.2.0",
     "@zxing/library": "^0.20.0",
     "babel-jest": "^29.7.0",
     "browser-image-compression": "^2.0.2",
