--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "vite": "^4.4.5"
   },
   "jest": {
