--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest --setupFiles dotenv/config"
+    "test": "jest --setupFiles dotenv/config -- ProfileLink.test.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
