--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest --setupFiles dotenv/config --collectCoverage"
+    "test": "jest --setupFiles dotenv/config --collectCoverage --silent",
+    "devtest": "jest --setupFiles dotenv/config --collectCoverage -o --verbose"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
